Fixing spacing

--- a/scss/modules/_filters.scss
+++ b/scss/modules/_filters.scss
@@ -50,6 +50,10 @@
   .accordion__content {
     padding: 2rem 2rem 1rem 2rem;
   }
+
+  .toggles {
+    margin: 1rem 0;
+  }
 }
 
 .filters__hider {
